--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -2,6 +2,9 @@ name: "Restart Instance every 5 mins"
 on:
   schedule:
     - cron: '*/5 * * * *'
+  push:
+   branches: [ "main" ]
+  pull_request:
 
 jobs:
   my-instances:
