--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -18,11 +18,20 @@ jobs:
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
       OCI_INSTANCE_ID: ${{ secrets.OCI_INSTANCE_ID }}
     steps:
-      - name: oci restart ${{ env.OCI_INSTANCE_ID }}
-        uses: oracle-actions/run-oci-cli-command@v1.1.1
-        id: restart_instance
+      - name: Retrieve the OCID of a named compartment in tenancy
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
+        id: find-compartment-id
         with:
-          command: 'compute instance action --instance-id ${{ env.OCI_INSTANCE_ID }} --action SOFTRESET'
-      - name: Show output
+          command: 'iam compartment list --compartment-id-in-subtree=true'
+          query: "data[?name=='testing'].id"
+
+      - name: Retrieve the display name and shape of the instances in my compartment
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
+        id: find-instances
+        with:
+          command: 'compute instance list --compartment-id ${{ steps.find-compartment-id.outputs.raw_output }}'
+          query: 'data[*].{name: \"display-name\", shape: shape}'
+
+      - name: List the display name and shape of the instances in my compartment
         run: |
-          echo ${{ steps.restart_instance.outputs.output }} | jq .
+          echo ${{ steps.find-instances.outputs.output }} | jq .
