--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -17,6 +17,7 @@ jobs:
       OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
       OCI_INSTANCE_ID: ${{ secrets.OCI_INSTANCE_ID }}
+   
     steps:
       - name: Retrieve the OCID of a named compartment in tenancy
         uses: oracle-actions/run-oci-cli-command@v1.3.2
@@ -35,3 +36,9 @@ jobs:
       - name: List the display name and shape of the instances in my compartment
         run: |
           echo ${{ steps.find-instances.outputs.output }} | jq .
+          echo ${{ secrets.OCI_INSTANCE_ID }}
+
+
+
+
+
