--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   my-instances:
     runs-on: self-hosted
+    environment: oci
     name: Restart Instance every 5 mins 
     env:
       OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
@@ -24,7 +25,7 @@ jobs:
         id: find-compartment-id
         with:
           command: 'iam compartment list --compartment-id-in-subtree=true'
-          query: "data[?name=='testing'].id"
+          query: "data[?name=='venkatesh.sampoornam'].id"
 
       - name: Retrieve the display name and shape of the instances in my compartment
         uses: oracle-actions/run-oci-cli-command@v1.3.2
