--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -3,7 +3,13 @@ on:
 #  schedule:
 #    - cron: '*/5 * * * *'
   
+  push:
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   my-instances:
