--- a/.github/workflows/logintoocr.yml
+++ b/.github/workflows/logintoocr.yml
@@ -10,9 +10,6 @@ on:
 jobs:
   get-ocir-repository-test:
     runs-on: ubuntu-22.0
-    run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
-    run: echo $GITHUB_SHA_SHORT
-    run: export OCI_CLI_KEY_CONTENT="$(/root/oracleidentitycloudservice_pri.pem)"
     environment: oracleoci
     name: Get OCIR Repository Test
     env:
@@ -22,6 +19,10 @@ jobs:
       OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
     steps:
+      - name: tst1
+        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_EN
+      - name: tst2
+        run: export OCI_CLI_KEY_CONTENT="$(/root/oracleidentitycloudservice_pri.pem)"
       - name: Get or create an OCIR Repository
         uses: oracle-actions/get-ocir-repository@v1.3.0
         id: get-ocir-repository
