--- a/.github/workflows/logintoocr.yml
+++ b/.github/workflows/logintoocr.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
 jobs:
   get-ocir-repository-test:
-    runs-on: ubuntu-22.0
+    runs-on: self-hosted
     environment: oracleoci
     name: Get OCIR Repository Test
     env:
