--- a/.github/workflows/logintoocr.yml
+++ b/.github/workflows/logintoocr.yml
@@ -1,4 +1,4 @@
-name: "Restart Instance every 5 mins"
+name: "login to ocir"
 on:
 #  schedule:
 #    - cron: '*/5 * * * *'
@@ -19,10 +19,11 @@ jobs:
       OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
     steps:
-      - name: tst1
-        run: echo "GITHUB_SHA_SHORT=$(echo $HOME)" >> $GITHUB_EN
+    
       - name: tst2
         run: export OCI_CLI_KEY_CONTENT="$(/root/oracleidentitycloudservice_pri.pem)"
+      - name: debg
+        run: echo ${{ env.OCI_CLI_KEY_CONTENT }}
       - name: Get or create an OCIR Repository
         uses: oracle-actions/get-ocir-repository@v1.3.0
         id: get-ocir-repository
