--- a/.github/workflows/logintoocr.yml
+++ b/.github/workflows/logintoocr.yml
@@ -23,7 +23,7 @@ jobs:
       - name: tst2
         run: export OCI_CLI_KEY_CONTENT3="$(cat /root/oracleidentitycloudservice_pri.pem)"
       - name: debg
-        run: echo ${{ env.OCI_CLI_KEY_CONTENT }}
+        run: echo ${{ OCI_CLI_KEY_CONTENT }}
       - name: userdtls
         run: echo $GITHUB_CONTEXT
       - name: Get or create an OCIR Repository
