--- a/.github/workflows/logintoocr.yml
+++ b/.github/workflows/logintoocr.yml
@@ -26,7 +26,7 @@ jobs:
       - name: debg
         run: echo ${OCI_CLI_KEY_CONTENT}
       - name: userdtls
-        run: echo $GITHUB_CONTEXT
+        run: echo ${{github.actor}} 
       - name: Get or create an OCIR Repository
         uses: oracle-actions/get-ocir-repository@v1.3.0
         id: get-ocir-repository
