--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -31,7 +31,9 @@ jobs:
         with:
           command: 'oci iam user get --user-id ocid1.user.oc1..aaaaaaaapner2csixx4zgbktqw7yks22qofv6yqpdej4ymg6faaplwo7ddxq'
       
-
+      - name: Check run status
+        if: steps.run.outputs.status != '0'
+        run: exit "${{ steps.run.outputs.status }}"
       - name: Retrieve the display name and shape of the instances in my compartment
         uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: find-instances
