--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -39,7 +39,7 @@ jobs:
           echo ${{ steps.find-compartment-id.outputs.output }} | jq .
           echo outputContent=${{ steps.find-compartment-id.outputs.output }} >> $env:GITHUB_OUTPUT
           echo ${{ secrets.OCI_INSTANCE_ID }}
-          echo "Bash version: ${{ steps.read-file-bash.outputs.outputContent }}"
+          echo "Bash version: ${{ steps.find-compartment-id.outputs.output }}"
 
 
 
