--- a/.github/workflows/restartinstance.yml
+++ b/.github/workflows/restartinstance.yml
@@ -30,7 +30,7 @@ jobs:
         id: find-compartment-id
         with:
           command: 'iam compartment list --compartment-id ocid1.tenancy.oc1..aaaaaaaaplkmid2untpzjcxrmbv4nowe74yb4lr6idtckwo4wyf7jh23be4q'
-          silent: false
+          silent: true
       
      
       - name: List the display name and shape of the instances in my compartment
