--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -26,8 +26,7 @@ jobs:
    
     steps:
       - name: "setup jdk"
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
          distribution: 'oracle'
          java-version: '21'
