--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -25,8 +25,16 @@ jobs:
       OCI_INSTANCE_ID: ${{ secrets.OCI_INSTANCE_ID }}
    
     steps:
-      
-         
+      - name : setup java
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+         distribution: 'oracle'
+         java-version: '21'
+        
+      - name: 'execute hello world' 
+        run: java -cp java HelloWorldApp
+             
       - name: 'Set up archived Oracle JDK 21.0.4'
         uses: oracle-actions/setup-java@v1
         with:
