--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -33,7 +33,7 @@ jobs:
          java-version: '21'
         
       - name: 'execute hello world' 
-        run: java -cp java HelloWorldApp
+        run: java -version
              
       - name: 'Set up archived Oracle JDK 21.0.4'
         uses: oracle-actions/setup-java@v1
