--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -32,7 +32,7 @@ jobs:
          java-version: '21'
       - name: 'execute java'
         run: |
-         'java -version'
+         'echo java -version'
          'echo "JAVA_CMD=$(echo $JAVA_HOME )/bin" >> $GITHUB_ENV '
          'echo $ {{ GITHUB_ENV }}'
       
