--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           java -version
           "JAVA_CMD=$(echo $JAVA_HOME )/bin" >> $GITHUB_ENV 
-          $ {{ GITHUB_ENV }}
+          echo $ {{ GITHUB_ENV }}
       
 
     
