--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -33,6 +33,8 @@ jobs:
       - name: 'execute java'
         run: |
           java -version
+          /thayer/sqlcl/bin/sql -version
+
           
          
 
