--- a/.github/workflows/ocidbclone.yml
+++ b/.github/workflows/ocidbclone.yml
@@ -12,6 +12,10 @@ on:
         description: 'database name '
         required: true
         default: 'dev1'
+      dbdisplayname:
+        description: 'database name '
+        required: true
+        default: 'dev2'
   
 jobs:
   my-instances:
@@ -32,7 +36,7 @@ jobs:
         uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: find-compartment-id
         with:
-          command: ' oci db autonomous-database create-from-clone --clone-type FULL --source-id ${{ secrets.sourceID }} --compute-model ECPU --compute-count 2 --data-storage-size-in-gbs 20 --admin-password ${{ secrets.DB_PASSWD }} --compartment-id ${{ secrets.OCI_COMPARTMENT_OCID }} --db-version 19c --db-name ${{ github.event.inputs.dbname }}
+          command: ' oci db autonomous-database create-from-clone --clone-type FULL --source-id ${{ secrets.sourceID }} --compute-model ECPU --compute-count 2 --data-storage-size-in-gbs 20 --admin-password ${{ secrets.DB_PASSWD }} --compartment-id ${{ secrets.OCI_COMPARTMENT_OCID }} --db-version 19c --db-name ${{ github.event.inputs.dbname }} --display-name --db-name ${{ github.event.inputs.dbdisplayname }}
 '
           silent: false
       - name: List the display name and shape of the instances in my compartment
