--- a/.github/workflows/ocidbclone.yml
+++ b/.github/workflows/ocidbclone.yml
@@ -13,7 +13,7 @@ on:
         required: true
         default: 'dev1'
       dbdisplayname:
-        description: 'database name '
+        description: 'database display name '
         required: true
         default: 'dev2'
   
