--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -14,8 +14,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-   synchsqlchanges:
+
+   build:
     runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: /thayer/envs/dev
     environment: oracleoci
     name: SQLcl Integration
     env:
@@ -34,6 +38,9 @@ jobs:
         with:
          distribution: 'oracle'
          java-version: '21'
+      -
+        
+        
       - name: 'setup directories'
         working-directory: /thayer/envs/dev
         run: |
@@ -46,23 +53,10 @@ jobs:
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
         
-          echo "lb generate-schema" | sql admin/Hanuman2025#@thayeratp_low?TNS_ADMIN=/thayer/
+          echo "lb update controller.xml" | sql admin/Hanuman2025#@thayeratp_low?TNS_ADMIN=/thayer/
           
 
           
          
 
     
-      - name: Retrieve the OCID of a named compartment in tenancy
-        uses: oracle-actions/run-oci-cli-command@v1.3.2
-        id: find-compartment-id
-        with:
-          command: 'iam compartment list --compartment-id ocid1.tenancy.oc1..aaaaaaaaplkmid2untpzjcxrmbv4nowe74yb4lr6idtckwo4wyf7jh23be4q'
-          silent: true
-      
-     
-      - name: List the display name and shape of the instances in my compartment
-        run: |
-          echo ${{ steps.find-compartment-id.outputs.output }} | jq .
-          echo outputContent=${{ steps.find-compartment-id.outputs.output }} >> $env:GITHUB_OUTPUT
-          echo "Bash version: ${{ steps.find-compartment-id.outputs.outputContent }}"
