--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -11,6 +11,15 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+     inputs:
+      dbinstance-environment:
+        description: 'name of the ATP DB instance to push the sql changes- dev,qa,uat,prod etc '
+        required: true
+        default: 'dev1'
+      dbinstance-displayname:
+        description: 'ATP database instance display name '
+        required: true
+        default: 'dev2'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,7 +29,7 @@ jobs:
     defaults:
       run:
         working-directory: /thayer/envs/dev
-    environment: oracleoci
+    environment: ${{ inputs.dbinstance-environment}}
     name: SQLcl Integration
     env:
       OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
@@ -29,8 +38,8 @@ jobs:
       OCI_CLI_KEY_FILE: ${{ secrets.OCI_CLI_KEY_FILE }}
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
       OCI_INSTANCE_ID: ${{ secrets.OCI_INSTANCE_ID }}
-      AGENT_TOOLSDIRECTORY: "/thayer/envs/dev"
-      RUNNER_TOOL_CACHE: "/thayer/envs/dev"
+      AGENT_TOOLSDIRECTORY: "/thayer/envs/${{ inputs.dbinstance-environment}}"
+      RUNNER_TOOL_CACHE: "/thayer/envs/${{ inputs.dbinstance-environment}}"
    
     steps:
       - name : setup java
@@ -42,18 +51,17 @@ jobs:
         
         
       - name: 'setup directories'
-        working-directory: /thayer/envs/dev
+        working-directory: /thayer/envs/${{ inputs.dbinstance-environment}}
         run: |
           mkdir -p dev2 
           echo "SQLCL_HOME=/thayer/sqlcl/" >> "$GITHUB_ENV"
           # eval version
           CMD="${SQLCL_HOME}/bin/sql -version"
           eval "${CMD}"
-
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
-        
-          echo "lb update controller.xml" | sql admin/Hanuman2025#@thayeratp_low?TNS_ADMIN=/thayer/
+    
+          echo "lb update controller.xml" | sql admin/${{ secrets.DB_PASSWD }}@${{ secrets.DB_Service_Name }}?TNS_ADMIN=/thayer/envs/${{ inputs.dbinstance-environment}}
           
 
           
