--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -55,7 +55,7 @@ jobs:
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
         
-          echo "lb generate-schema" | sql ${{ secrets.DB_USERNAME }}/${{ secrets.DB_PASSWD }}${{ secrets.DB_${{ inputs.db-instance-name }}_SERVICENAME }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/${{ inputs.db-instance-name }}
+          echo "lb generate-schema" | sql ${{ secrets.DB_USERNAME }}/${{ secrets.DB_${{ inputs.db-instance-name }}_PASSWD }}${{ secrets.DB_${{ inputs.db-instance-name }}_SERVICENAME }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/${{ inputs.db-instance-name }}
           
 
           
