--- a/.github/workflows/sqlclintegration.yml
+++ b/.github/workflows/sqlclintegration.yml
@@ -51,19 +51,19 @@ jobs:
          
 
     
-      - name: Retrieve the OCID of a named compartment in tenancy
-        uses: oracle-actions/run-oci-cli-command@v1.3.2
-        id: find-compartment-id
-        with:
-          command: 'iam compartment list --compartment-id ocid1.tenancy.oc1..aaaaaaaaplkmid2untpzjcxrmbv4nowe74yb4lr6idtckwo4wyf7jh23be4q'
-          silent: true
+      # - name: Retrieve the OCID of a named compartment in tenancy
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.2
+      #   id: find-compartment-id
+      #   with:
+      #     command: 'iam compartment list --compartment-id ocid1.tenancy.oc1..aaaaaaaaplkmid2untpzjcxrmbv4nowe74yb4lr6idtckwo4wyf7jh23be4q'
+      #     silent: true
       
      
-      - name: List the display name and shape of the instances in my compartment
-        run: |
-          echo ${{ steps.find-compartment-id.outputs.output }} | jq .
-          echo outputContent=${{ steps.find-compartment-id.outputs.output }} >> $env:GITHUB_OUTPUT
-          echo "Bash version: ${{ steps.find-compartment-id.outputs.outputContent }}"
+      # - name: List the display name and shape of the instances in my compartment
+      #   run: |
+      #     echo ${{ steps.find-compartment-id.outputs.output }} | jq .
+      #     echo outputContent=${{ steps.find-compartment-id.outputs.output }} >> $env:GITHUB_OUTPUT
+      #     echo "Bash version: ${{ steps.find-compartment-id.outputs.outputContent }}"
       
 
 
