--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -44,9 +44,9 @@ jobs:
          distribution: 'oracle'
          java-version: '21'
       - name: 'setup directories'
-        working-directory: /thayer/envs/${{ inputs.envname }}
+        working-directory: /thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
         run: |
-          mkdir -p dev2 
+         
           echo "SQLCL_HOME=/thayer/sqlcl/" >> "$GITHUB_ENV"
           # eval version
           CMD="${SQLCL_HOME}/bin/sql -version"
@@ -55,7 +55,7 @@ jobs:
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
         
-          echo "lb generate-schema" | sql ${{ secrets.DB_USERNAME }}/${{ secrets.format('DB_{0}', inputs.db-instance-name)_PASSWD }}${{ secrets.format('DB_{0}', inputs.db-instance-name)_PASSWD_SERVICENAME }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/${{ inputs.db-instance-name }}
+          echo "lb update controller.xml" | sql ${{ secrets.DB_USERNAME }}/${{ secrets.format('DB_{0}', inputs.db-instance-name)_PASSWD }}@${{ secrets.format('DB_{0}', inputs.db-instance-name)_SERVICENAME }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
           
 
           
