--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -70,7 +70,7 @@ jobs:
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
         
-          echo "lb update controller.xml" | sql ${{ secrets.DB_USERNAME }}/${{ secrets.format('DB_{0}', inputs.db-instance-name)_PASSWD }}@${{ secrets.format('DB_{0}', inputs.db-instance-name)_SERVICENAME }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
+          echo "lb update controller.xml" | sql ${{ secrets[DB_format('{0},'inputs.db-instance-name)_PASSWD] }}/${{ secrets[DB_format('{0},'inputs.db-instance-name)_PASSWD] }}@${{ secrets[DB_format('{0},'inputs.db-instance-name)_SERVICENAME] }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
           
 
           
