--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -39,6 +39,9 @@ jobs:
       OCI_INSTANCE_ID: ${{ secrets.OCI_INSTANCE_ID }}
       RUNNER_TOOL_CACHE: /thayer/envs/${{ inputs.envname }}
       AGENT_TOOLSDIRECTORY: /thayer/envs/${{ inputs.envname }}
+      DB_USER: format({0}{1}{2},DB_,inputs.db-instance-name,_USER)
+      DB_PASSWD: format({0}{1}{2},DB_,inputs.db-instance-name,_PASSWD)
+      DB_SVCNAME: format({0}{1}{2},DB_,inputs.db-instance-name,_SVCNAME)
    
     steps:
      
@@ -71,7 +74,7 @@ jobs:
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
           
         
-          echo "lb update controller.xml" | sql ${{ secrets[DB_format('{0},'inputs.db-instance-name)_PASSWD] }}/${{ secrets[DB_format('{0},'inputs.db-instance-name)_PASSWD] }}@${{ secrets[DB_format('{0},'inputs.db-instance-name)_SERVICENAME] }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
+          echo "lb update controller.xml" | sql ${{ secrets[env.DB_USER] }}/${{ secrets[env.DB_PASSWD] }}@${{ secrets[secrets[env.DB_SVCNAME] }}?TNS_ADMIN=/thayer/envs/${{ inputs.envname }}/dbinstances/${{ inputs.db-instance-name }}
           
 
           
